syntax = "proto3";

import "google/protobuf/struct.proto";

package twirp_transport;

service EventStore {
  rpc ReadStream(ReadStreamRequest) returns (ReadStreamResponse) {}
}

message ReadStreamRequest {
  string stream_id = 1;
}

message ReadStreamResponse {
  repeated Event events = 1;
}

message Event {
  string stream_id = 1;
  string topic = 2;
  google.protobuf.Struct payload = 3;
}
